Fixed an issue causing images to be stretched and fixed markeup for a blog post that had the excerpt broken.

--- a/_assets/stylesheets/components/blog.less
+++ b/_assets/stylesheets/components/blog.less
@@ -1,7 +1,4 @@
 .blog-post {
-  img {
-    width: 100%;
-  }
 
   .related-pretitle {
     text-transform: uppercase;
